--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/app_back"
-    android:padding="10dp" >
+    android:padding="10dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -15,9 +15,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:src="@drawable/operators"
-            android:padding="5dp"
-            android:contentDescription="operators"/>
+            android:adjustViewBounds="false"
+            android:contentDescription="operators"
+            android:padding="10dp"
+            android:layout_marginTop="40dp"
+            android:src="@drawable/operators" />
 
         <TextView
             android:id="@+id/intro"
@@ -25,10 +27,11 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/operators"
             android:layout_centerHorizontal="true"
-            android:padding="20dp"
+            android:padding="10dp"
+            android:layout_marginBottom="40dp"
             android:text="@string/app_name"
             android:textColor="#ffffffff"
-            android:textSize="20sp"
+            android:textSize="24sp"
             android:textStyle="bold" />
         <Button
             android:id="@+id/play_btn"
