Display High Scores

--- a/app/src/main/res/layout/activity_high.xml
+++ b/app/src/main/res/layout/activity_high.xml
@@ -15,7 +15,8 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:contentDescription="operators"
-            android:src="@drawable/operators" />
+            android:src="@drawable/operators"
+            android:layout_marginTop="40dp" />
 
         <TextView
             android:id="@+id/intro"
