--- a/app/src/main/res/layout/activity_how.xml
+++ b/app/src/main/res/layout/activity_how.xml
@@ -37,6 +37,7 @@
             android:layout_centerHorizontal="true"
             android:padding="10dp"
             android:text="@string/help_info"
+            android:gravity="center"
             android:textColor="#ffffffff"
             android:textSize="16sp" />
     </RelativeLayout>
